tests/cases_invalid/misc/item_unknown_keyword/.expected
error: expected item
 --> ./cases_invalid/misc/item_unknown_keyword/main.shd:1:1
  |
1 | buffer buffer_name = 42.;
  | ^ here
  |
